--- a/index.html
+++ b/index.html
@@ -13,14 +13,14 @@
 
 
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport"
           content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no">
     <link rel="stylesheet" href="../css/styles.css">
 	<script src="https://telegram.org/js/telegram-web-app.js" defer></script>
-    <title>Your Webapp Title</title>
+    <title>Alkashcoin tap-to-earn</title>
 </head>
 <body id="index-page">
 
@@ -42,7 +42,7 @@
 			<div class="upcoming-tag">soon</div>
 		</div>
 		<div class="menu-item" id="referral" style="--mask-url: none" onclick="location.href='./src/pages/referral.html'">
-			<img src="./assets/menu_icons/refer.webp" alt="refer">
+			<img src="./assets/add_ref.webp" alt="refer">
 		</div>
 	</div>
     
