--- a/index.html
+++ b/index.html
@@ -32,17 +32,17 @@
 	
 	<div class="menu-bar">
 		<div class="menu-item" id="wallet" style="--mask-url: none">
-			<img src="./assets/menu_icons/wallet.webp" alt="wallet">
+			<img src="assets/wallet.webp" alt="wallet">
 		</div>
 		<div class="menu-item" id="boosters" style="--mask-url: none" onclick="location.href='./src/pages/boosters.html'">
-			<img src="./assets/menu_icons/earn.webp" alt="earn">
+			<img src="assets/earn.webp" alt="earn">
 		</div>
 		<div class="menu-item" id="ranking" style="--mask-url: none">
-			<img src="./assets/menu_icons/ranking.webp" alt="ranking">
+			<img src="assets/ranking.webp" alt="ranking">
 			<div class="upcoming-tag">soon</div>
 		</div>
 		<div class="menu-item" id="referral" style="--mask-url: none" onclick="location.href='./src/pages/referral.html'">
-			<img src="./assets/add_ref.webp" alt="refer">
+			<img src="assets/add_ref.webp" alt="refer">
 		</div>
 	</div>
     
