--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 			<div class="upcoming-tag">soon</div>
 		</div>
 		<div class="menu-item" id="referral" style="--mask-url: none" onclick="location.href='./src/pages/referral.html'">
-			<img src="assets/add_ref.webp" alt="refer">
+			<img src="assets/add_ref_menu.webp" alt="refer">
 		</div>
 	</div>
     
