--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
 	<div class="total-coins-container"></div>
 	
 	<div class="menu-bar">
+	  <nav class="menu">
 		<div class="menu-item" id="wallet" style="--mask-url: none">
 			<img src="assets/wallet.webp" alt="wallet">
 		</div>
@@ -44,6 +45,7 @@
 		<div class="menu-item" id="referral" style="--mask-url: none" onclick="location.href='./src/pages/referral.html'">
 			<img src="assets/add_ref_menu.webp" alt="refer">
 		</div>
+      </nav>
 	</div>
     
     <div class="counter-container"></div>
