--- a/src/pages/boosters.html
+++ b/src/pages/boosters.html
@@ -20,7 +20,7 @@
           content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no">
     <link rel="stylesheet" href="../css/styles.css">
 	<script src="https://telegram.org/js/telegram-web-app.js" defer></script>
-    <title>Your Webapp Title</title>
+    <title>boosters</title>
 </head>
 <body>
 
