--- a/boosters.html
+++ b/boosters.html
@@ -7,5 +7,5 @@
         <div class="boosters-box" id="surpriseBox"></div>
         <div class="boosters-box" id="boostersBox"></div>
         <div class="boosters-box" id="questsBox"></div>
-    </div></body>
-</html>
+    </div>
+</body>
