--- a/referral.html
+++ b/referral.html
@@ -1,7 +1,4 @@
-
-<!DOCTYPE html>
-<html lang="en">
-
+{% extends 'base.html' %}
 <body>
     <div class="background"></div>
     <div class="invite-box" id="inviteBox"></div>
