--- a/src/pages/boosters.html
+++ b/src/pages/boosters.html
@@ -1,4 +1,4 @@
-!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -6,22 +6,22 @@
           content="width=device-width, initial-scale=1, minimum-scale=1, maximum-scale=1, user-scalable=no">
     <link rel="stylesheet" href="../css/styles.css">
 	<script src="https://telegram.org/js/telegram-web-app.js" defer></script>
-    <title>Your Webapp Title</title>
+    <title>alkashcoin</title>
 </head>
 <body>
   <div class="menu-bar">
 		<div class="menu-item" id="wallet" style="--mask-url: none">
-			<img src="./assets/menu_icons/wallet.webp" alt="wallet">
+			<img src="./assets/wallet.webp" alt="wallet">
 		</div>
 		<div class="menu-item" id="boosters" style="--mask-url: none" onclick="location.href='./src/pages/boosters.html'">
-			<img src="./assets/menu_icons/earn.webp" alt="earn">
+			<img src="./assets/earn.webp" alt="earn">
 		</div>
 		<div class="menu-item" id="ranking" style="--mask-url: none">
-			<img src="./assets/menu_icons/ranking.webp" alt="ranking">
+			<img src="./assets/ranking.webp" alt="ranking">
 			<div class="upcoming-tag">soon</div>
 		</div>
 		<div class="menu-item" id="referral" style="--mask-url: none" onclick="location.href='./src/pages/referral.html'">
-			<img src="./assets/menu_icons/refer.webp" alt="refer">
+			<img src="./assets/refer.webp" alt="refer">
 		</div>
 	</div>
 </body>
