--- a/src/pages/referral.html
+++ b/src/pages/referral.html
@@ -11,18 +11,18 @@
 <body>
   <div class="menu-bar">
 		<div class="menu-item" id="wallet" style="--mask-url: none">
-			<img src="./assets/wallet.webp" alt="wallet">
+			<img src="../assets/wallet.webp" alt="wallet">
 			<div class="upcoming-tag">soon</div>
 		</div>
 		<div class="menu-item" id="boosters" style="--mask-url: none" onclick="location.href='./boosters.html'">
-			<img src="./assets/earn.webp" alt="earn">
+			<img src="../assets/earn.webp" alt="earn">
 		</div>
 		<div class="menu-item" id="ranking" style="--mask-url: none">
-			<img src="./assets/ranking.webp" alt="ranking">
+			<img src="../assets/ranking.webp" alt="ranking">
 			<div class="upcoming-tag">soon</div>
 		</div>
 		<div class="menu-item" id="referral" style="--mask-url: none" onclick="location.href='./referral.html'">
-			<img src="./assets/refer.webp" alt="refer">
+			<img src="../assets/refer.webp" alt="refer">
 		</div>
 	</div>
 </body>
