--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		<div class="menu-item" id="wallet" style="--mask-url: none">
 			<img src="./assets/wallet.webp" alt="wallet">
 		</div>
-		<div class="menu-item" id="boosters" style="--mask-url: none" onclick="location.href='./src/pages/boosters.html'">
+		<div class="menu-item" id="boosters" style="--mask-url: none" onclick="location.href='./index.html'">
 			<img src="./assets/earn.webp" alt="earn">
 		</div>
 		<div class="menu-item" id="ranking" style="--mask-url: none">
