--- a/src/pages/referral.html
+++ b/src/pages/referral.html
@@ -14,7 +14,7 @@
 			<img src="../../../assets/wallet.webp" alt="wallet">
 			<div class="upcoming-tag">soon</div>
 		</div>
-		<div class="menu-item" id="boosters" style="--mask-url: none" onclick="location.href='./boosters.html'">
+		<div class="menu-item" id="boosters" style="--mask-url: none" onclick="location.href='../../../index.html'">
 			<img src="../../../assets/earn.webp" alt="earn">
 		</div>
 		<div class="menu-item" id="ranking" style="--mask-url: none">
