--- a/index.html
+++ b/index.html
@@ -9,9 +9,15 @@
     <title>alkashcoin</title>
 </head>
 <body>
+  <div class="background"></div>
+
+  <div class="coin-container"></div>
+
+  <div class="total-coins-container"></div>
   <div class="menu-bar">
 		<div class="menu-item" id="wallet" style="--mask-url: none">
 			<img src="./assets/wallet.webp" alt="wallet">
+			<div class="upcoming-tag">soon</div>
 		</div>
 		<div class="menu-item" id="boosters" style="--mask-url: none" onclick="location.href='./index.html'">
 			<img src="./assets/earn.webp" alt="earn">
@@ -24,5 +30,9 @@
 			<img src="./assets/refer.webp" alt="refer">
 		</div>
 	</div>
+	<script type="module">
+		import { activateMenuItemEffect } from "./src/js/utils.js";
+		document.addEventListener('DOMContentLoaded', () => {activateMenuItemEffect();})
+	</script>
 </body>
 </html>
