--- a/src/pages/referral.html
+++ b/src/pages/referral.html
@@ -11,9 +11,7 @@
 <body>
   <div class="background"></div>
 
-  <div class="coin-container"></div>
-
-  <div class="total-coins-container"></div>
+  <div class="invite-box" id="inviteBox"></div>
   <div class="menu-bar">
 		<div class="menu-item" id="wallet" style="--mask-url: none">
 			<img src="../../../assets/wallet.webp" alt="wallet">
