--- a/index.html
+++ b/index.html
@@ -15,17 +15,7 @@
 
   <div class="total-coins-container"></div>
   <div class="menu-bar">
-		<div class="menu-item" id="wallet" style="--mask-url: none">
-			<img src="./assets/wallet.webp" alt="wallet">
-			
-		</div>
-		<div class="menu-item" id="boosters" style="--mask-url: none" onclick="location.href='./index.html'">
-			<img src="./assets/earn.webp" alt="earn">
-		</div>
-		
-		<div class="menu-item" id="referral" style="--mask-url: none" onclick="location.href='./src/pages/referral.html'">
-			<img src="./assets/refer.webp" alt="refer">
-		</div>
+		<div class="menu-item" id="wallet" style="--mask-url: none"><img src="./assets/wallet.webp" alt="wallet"></div><div class="menu-item" id="boosters" style="--mask-url: none" onclick="location.href='./index.html'"><img src="./assets/earn.webp" alt="earn"></div><div class="menu-item" id="referral" style="--mask-url: none" onclick="location.href='./src/pages/referral.html'"><img src="./assets/refer.webp" alt="refer"></div>
 	</div>
 	<script type="module">
 		import { activateMenuItemEffect } from "./src/js/utils.js";
