--- a/src/pages/referral.html
+++ b/src/pages/referral.html
@@ -13,7 +13,18 @@
 
   <div class="invite-box" id="inviteBox"></div>
   <div class="menu-bar">
-		<div class="menu-item" id="wallet" style="--mask-url: none"><img src="../../../assets/wallet.webp" alt="wallet"></div><div class="menu-item" id="boosters" style="--mask-url: none" onclick="location.href='../../../index.html'"><img src="../../../assets/earn.webp" alt="earn"></div></div><div class="menu-item" id="referral" style="--mask-url: none" onclick="location.href='./referral.html'"><img src="../../../assets/refer.webp" alt="refer"></div>
-  </div>
+		<div class="menu-item" id="wallet" style="--mask-url: none">
+			<img src="../../../assets/wallet.webp" alt="wallet">
+			
+		</div>
+		<div class="menu-item" id="boosters" style="--mask-url: none" onclick="location.href='../../../index.html'">
+			<img src="../../../assets/earn.webp" alt="earn">
+		</div>
+					
+		</div>
+		<div class="menu-item" id="referral" style="--mask-url: none" onclick="location.href='./referral.html'">
+			<img src="../../../assets/refer.webp" alt="refer">
+		</div>
+	</div>
 </body>
 </html>
