--- a/src/pages/referral.html
+++ b/src/pages/referral.html
@@ -12,7 +12,7 @@
   <div class="background"></div>
 
   <div class="invite-box" id="inviteBox"></div>
-  <div class="menu-bar">
+  <div class="menu-bar" style="text-align:center;">
 		<div class="menu-item" id="wallet" style="--mask-url: none">
 			<img src="../../../assets/wallet.webp" alt="wallet">
 			
