--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <div class="coin-container"></div>
 
   <div class="total-coins-container"></div>
-  <div class="menu-bar">
+  <div class="menu-bar" style="text-align:center;">
 		<div class="menu-item" id="wallet" style="--mask-url: none">
 			<img src="./assets/wallet.webp" alt="wallet">
 			
