--- a/src/pages/referral.html
+++ b/src/pages/referral.html
@@ -13,7 +13,7 @@
 
   <div class="invite-box" id="inviteBox"></div>
   <div class="menu-bar" style="text-align:center;">
-		<div class="menu-item" id="wallet" style="--mask-url: none">
+		<div class="menu-item" id="wallet" style="--mask-url: none; float:left;">
 			<img src="../../../assets/wallet.webp" alt="wallet">
 			
 		</div>
@@ -22,7 +22,7 @@
 		</div>
 					
 		
-		<div class="menu-item" id="referral" style="--mask-url: none" onclick="location.href='./referral.html'">
+		<div class="menu-item" id="referral" style="--mask-url: none; float:right;" onclick="location.href='./referral.html'">
 			<img src="../../../assets/refer.webp" alt="refer">
 		</div>
 	</div>
