--- a/index.html
+++ b/index.html
@@ -15,16 +15,16 @@
 
   <div class="total-coins-container"></div>
   <div class="menu-bar" style="text-align:center;">
-		<div class="menu-item" id="wallet" style="--mask-url: none">
+		<div class="menu-item" id="wallet" style="--mask-url: none; float:left;">
 			<img src="./assets/wallet.webp" alt="wallet">
 			
 		</div>
-		<div class="menu-item" id="boosters" style="--mask-url: none" onclick="location.href='./index.html'">
+		<div class="menu-item" id="boosters" style="--mask-url: none;" onclick="location.href='./index.html'">
 			<img src="./assets/earn.webp" alt="earn">
 		</div>
 					
 		
-		<div class="menu-item" id="referral" style="--mask-url: none" onclick="location.href='./src/pages/referral.html'">
+		<div class="menu-item" id="referral" style="--mask-url: none; float:right;" onclick="location.href='./src/pages/referral.html'">
 			<img src="./assets/refer.webp" alt="refer">
 		</div>
 	</div>
