--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru" style="background-image: url(assets/index_lets_tap.jpg);" background-repeat="no-repeat"; background-position="center center"; background-attachment="fixed"; -webkit-background-size="cover";  -moz-background-size="cover"; -o-background-size="cover";  background-size="cover";>
 <head>
     <meta charset="UTF-8">
     <meta name="viewport"
@@ -8,8 +8,9 @@
 	
     <title>alkashcoin</title>
 </head>
+
 <body>
-  <div class="background"></div>
+ 
 
   <div class="coin-container"></div>
 
@@ -18,7 +19,7 @@
 		<div class="menu-item" id="wallet" style="--mask-url: none; float:left;">
 			<img src="./assets/wallet.webp" alt="wallet">	
 		</div>
-		<div class="menu-item" id="boosters" style="--mask-url: none;" onclick="location.href='./index.html'">
+		<div class="menu-item" id="boosters" style="--mask-url: none; float:center;" onclick="location.href='./index.html'">
 			<img src="./assets/earn.webp" alt="earn">
 		</div>					
 		<div class="menu-item" id="referral" style="--mask-url: none; float:right;" onclick="location.href='./src/pages/referral.html'">
