--- a/src/pages/referral.html
+++ b/src/pages/referral.html
@@ -9,8 +9,8 @@
     <title>alkashcoin</title>
 </head>
 <body style="background: src="../../../assets/index_lets_tap.jpg"">
- 
-
+</body> 
+<footer>
   <div class="invite-box" id="inviteBox"></div>
   <div class="menu-bar" style="text-align:center;">
 		<div class="menu-item" id="wallet" style="--mask-url: none; float:left;">
@@ -23,5 +23,5 @@
 			<img src="../../../assets/refer.webp" alt="refer">
 		</div>
 	</div>
-</body>
+</footer>
 </html>
