--- a/index.html
+++ b/index.html
@@ -8,14 +8,17 @@
 	
     <title>alkashcoin</title>
 </head>
-
 <body>
- 
-
   <div class="coin-container"></div>
 
   <div class="total-coins-container"></div>
   <div class="menu-bar" style="text-align:center;">
+	<script type="module">
+		import { activateMenuItemEffect } from "./src/js/utils.js";
+		document.addEventListener('DOMContentLoaded', () => {activateMenuItemEffect();})
+	</script>
+</body>
+<footer>
 		<div class="menu-item" id="wallet" style="--mask-url: none; float:left;">
 			<img src="./assets/wallet.webp" alt="wallet">	
 		</div>
@@ -26,9 +29,6 @@
 			<img src="./assets/refer.webp" alt="refer">
 		</div>
 	</div>
-	<script type="module">
-		import { activateMenuItemEffect } from "./src/js/utils.js";
-		document.addEventListener('DOMContentLoaded', () => {activateMenuItemEffect();})
-	</script>
-</body>
+</footer>	
+ 
 </html>
