--- a/src/pages/referral.html
+++ b/src/pages/referral.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ru" style="background-image: url(../../../assets/index_lets_tap.jpg);" background-repeat="no-repeat"; background-position="center center"; background-attachment="fixed"; -webkit-background-size="cover";  -moz-background-size="cover"; -o-background-size="cover";  background-size="cover";>
+<html lang="ru" style="background-image: url(../../../assets/index_lets_tap.jpg);" >
 <head>
     <meta charset="UTF-8">
     <meta name="viewport"
@@ -8,9 +8,10 @@
 	
     <title>alkashcoin</title>
 </head>
-<body style="background: src="../../../assets/index_lets_tap.jpg"">
-</body> 
-<footer>
+<body>
+<img src="assets/index_lets_tap.jpg" alt="let`s taping!">
+ 
+<DOWN>
   <div class="invite-box" id="inviteBox"></div>
   <div class="menu-bar" style="text-align:center;">
 		<div class="menu-item" id="wallet" style="--mask-url: none; float:left;">
@@ -23,5 +24,6 @@
 			<img src="../../../assets/refer.webp" alt="refer">
 		</div>
 	</div>
-</footer>
+<?DOWN>
+</body>
 </html>
